--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,5 @@ __pycache__/
 *.csv # Be careful with this one if you track data
 *.xlsx # Be careful with this one if you track data
 /data/ # if you have a local data folder that shouldn't be tracked
-/artifacts/ # if you save models/results here
+# /artifacts/ # if you save models/results here
 
-.artifacts
